--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -18,7 +18,7 @@
       <a role="button" class="history-btn col-xs-12" href="#history"><span class="glyphicon glyphicon-calendar col-xs-2"></span> <p class="col-xs-10 new-btn">My History</p></a>
     </div>
     <div class="row row-2 button3">
-      <a role="button" class="pr-btn col-xs-12" href="#/pr"> <span class="glyphicon glyphicon-fire col-xs-2"></span><p class="new-btn col-xs-10">My PR's</p></a>
+      <a role="button" class="pr-btn col-xs-12" href="#pr"> <span class="glyphicon glyphicon-fire col-xs-2"></span><p class="new-btn col-xs-10">My PR's</p></a>
     </div>
   </section>
 </section><!-- / section#dashboard -->
