--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -487,7 +487,7 @@ and (orientation : landscape) {
   .kettle {
     width: 25em;
     margin: 0 auto;
-    padding-top: 22ex;
+    padding-top: 10%;
   }
 }
 /*Large devices (large desktops, 1200px and up)
