--- a/src/app/views/login.html
+++ b/src/app/views/login.html
@@ -1,10 +1,11 @@
 <!-- Login Screen -->
 <section  class="kettleBox" >
   <figure ng-click="app.login()">
-    <a><img src="./assets/images/fbkettle.png" alt="" class="img-responsive kettle"></a><br>
-    <figcaption class="loginText">
+    <!-- <figcaption class="loginText">
       <a href="#"><h3>Login</h3></a>
-    </figcaption>
+    </figcaption>  -->
+    <a><img src="./assets/images/fbkettle.png" alt="" class="img-responsive kettle"></a><br>
+
   </figure>
   <footer><em>Privacy Policy</em></footer>
 </section>
