--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -387,6 +387,12 @@ label > h3 {
   color: rgba(255,255,255,0.8);
   font-size: 20pt;
 }
+#namedWorkouts {
+  width: 25%;
+  margin: 0 auto;
+  font-size: 15pt;
+  height: 3ex;
+}
 @media only screen
 and (min-device-width : 320px)
 and (max-device-width : 568px)
