select placeholder and final score/time added

--- a/src/app/views/namedworkout.html
+++ b/src/app/views/namedworkout.html
@@ -2,7 +2,7 @@
   <div class="new-move">
     <h3>Workout Of the Day</h3>
     <select ng-model="selectedWork" id="namedWorkouts" class="form-control"  ng-options="name.namedWork for name in work.namedList.named">
-      <option value="Select Workout">Select Workout</option>
+      <option value="" selected>Select Workout</option>
     </select>
     <section ng-repeat="move in selectedWork.movements">
       <p style="color: white;">{{move.name}}</p>
@@ -10,5 +10,6 @@
     <p style="color: white; font-weight: bold;">Rds:</p><p style="color: white;">{{move.rds}}</p>
   <p style="color: white; font-weight: bold;">Weight:</p><input value="{{move.weight}}">
     </section>
+    <p style="color: white; font-weight: bold;">Final Score/Time:</p><input type="text" value="{{selectedWork.finalScore}}">
   </div>
 </section>
